@startuml ThynGo_Modules

title ThynGo Modules - PostgreSQL Database Schema

database "thyngo" as thyngo {
}

entity "media" as media <<table>> {
  id : BIGSERIAL «PK»
  user_id : BIGINT
  slug : TEXT «unique»
  title : TEXT
  type : TEXT «image, video, document, audio, other»
  url : TEXT
  file_name : TEXT
  file_size : BIGINT
  mime_type : TEXT
  visibility : TEXT «public, private, shared»
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "movies" as movies <<table>> {
  id : BIGSERIAL «PK»
  user_id : BIGINT
  media_id : BIGINT «FK -> media.id»
  title : TEXT
  description : TEXT
  release_date : DATE
  duration : INT «seconds»
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "series" as series <<table>> {
  id : BIGSERIAL «PK»
  user_id : BIGINT
  title : TEXT
  description : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "seasons" as seasons <<table>> {
  id : BIGSERIAL «PK»
  series_id : BIGINT «FK -> series.id»
  season_number : INT
  title : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "episodes" as episodes <<table>> {
  id : BIGSERIAL «PK»
  season_id : BIGINT «FK -> seasons.id»
  media_id : BIGINT «FK -> media.id»
  episode_number : INT
  title : TEXT
  description : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "music_albums" as music_albums <<table>> {
  id : BIGSERIAL «PK»
  user_id : BIGINT
  title : TEXT
  artist : TEXT
  cover_media_id : BIGINT «FK -> media.id»
  release_date : DATE
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "music_tracks" as music_tracks <<table>> {
  id : BIGSERIAL «PK»
  album_id : BIGINT «FK -> music_albums.id»
  media_id : BIGINT «FK -> media.id»
  title : TEXT
  track_number : INT
  duration : INT «seconds»
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "posts" as posts <<table>> {
  id : BIGSERIAL «PK»
  user_id : BIGINT
  slug : TEXT «unique»
  title : TEXT
  visibility : TEXT «public, private, shared»
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "projects" as projects <<table>> {
  id : BIGSERIAL «PK»
  user_id : BIGINT
  slug : TEXT «unique»
  title : TEXT
  visibility : TEXT «public, private, shared»
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "resumes" as resumes <<table>> {
  id : BIGSERIAL «PK»
  user_id : BIGINT
  name : TEXT
  email : TEXT
  phone : TEXT
  job : TEXT
  github : TEXT
  linkedin : TEXT
  website : TEXT
  visibility : TEXT «public, private, shared»
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "users" as users <<table>> {
  id : BIGSERIAL «PK»
  username : TEXT «unique»
  email : TEXT «unique»
  password_hash : TEXT
  role : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "resource_accesses" as resource_accesses <<table>> {
  id : BIGSERIAL «PK»
  user_id : BIGINT «FK -> users.id»
  resource_type : TEXT «media, posts, projects, resumes, movies, series, music_albums»
  resource_id : BIGINT
  permission : TEXT «view, edit»
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "contents" as contents <<table>> {
  id : BIGSERIAL «PK»
  parent_table : TEXT «posts, projects»
  parent_id : BIGINT
  ord : INT
  type : TEXT «image,title,text,code,custom»
  block_id : BIGINT «FK -> blocks.id»
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "blocks" as blocks <<table>> {
  id : BIGSERIAL «PK»
  type : TEXT «image,title,text,code,custom»
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "image_blocks" as images <<table>> {
  id : BIGSERIAL «PK»
  block_id : BIGINT
  url : TEXT
  title : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "title_blocks" as titles <<table>> {
  id : BIGSERIAL «PK»
  block_id : BIGINT
  level : SMALLINT
  content : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "text_blocks" as texts <<table>> {
  id : BIGSERIAL «PK»
  block_id : BIGINT
  content : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "code_blocks" as codes <<table>> {
  id : BIGSERIAL «PK»
  block_id : BIGINT
  language : TEXT
  content : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "custom_blocks" as customs <<table>> {
  id : BIGSERIAL «PK»
  block_id : BIGINT
  payload : JSONB
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "experiences" as experiences <<table>> {
  id : BIGSERIAL «PK»
  resume_id : BIGINT
  job_title : TEXT
  job_type : TEXT
  company : TEXT
  started_date : DATE
  ended_date : DATE
  location : TEXT
  location_type : TEXT
  description : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "educations" as educations <<table>> {
  id : BIGSERIAL «PK»
  resume_id : BIGINT
  school : TEXT
  diploma : TEXT
  study_field : TEXT
  started_date : DATE
  ended_date : DATE
  description : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "skills" as skills <<table>> {
  id : BIGSERIAL «PK»
  resume_id : BIGINT
  title : TEXT
  description : TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

' Modules tables
thyngo --> media
thyngo --> projects
thyngo --> posts
thyngo --> resumes
thyngo --> users
thyngo --> movies
thyngo --> series
thyngo --> music_albums

' Contents / Blocks relations
posts "1" -- "0..*" contents : has_contents_blocks
projects "1" -- "0..*" contents : has_contents_blocks
contents "1" -- "1" blocks : references_block
blocks "1" -- "0..*" contents : used_by_contents

' Blocks to specific block tables
blocks "1" -- "0..*" images : has_image_variant
blocks "1" -- "0..*" titles : has_title_variant
blocks "1" -- "0..*" texts : has_text_variant
blocks "1" -- "0..*" codes : has_code_variant
blocks "1" -- "0..*" customs : has_custom_variant

' Resume related tables
resumes "1" -- "0..*" experiences
resumes "1" -- "0..*" educations
resumes "1" -- "0..*" skills



' Cinema relations
series "1" -- "0..*" seasons
seasons "1" -- "0..*" episodes
movies -- media : uses
episodes -- media : uses

' Music relations
music_albums "1" -- "0..*" music_tracks
music_albums -- media : has_cover
music_tracks -- media : uses

' Ownership
users ||--o{ media : owns
users ||--o{ posts : owns
users ||--o{ projects : owns
users ||--o{ resumes : owns
users ||--o{ movies : owns
users ||--o{ series : owns
users ||--o{ music_albums : owns

users ||--o{ resource_accesses : granted_to

resumes ||--o{ experiences : has
resumes ||--o{ educations : has
resumes ||--o{ skills : has

@enduml
